# catap

./: .gitignore  BINDINGS_COMPLETE.md  BUNDLE_TEST_RESULTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  setup.py  test_bundle_launch.sh
.github/workflows/: ci.yml  publish-test.yml  publish.yml
docs/: core-audio-notes.md  core-audio-support-matrix.md  headless-signal-fixtures.md  mute-behavior.md  performance.md  profiling.md
native/catap_coreaudio/include/: catap_coreaudio.h
native/catap_coreaudio/src/: catap_coreaudio.c
scripts/: build_native_coreaudio.py  catap_bench.py  catap_core_lab.py  catap_demo_gui.py  catap_live_probe.py  catap_mute_timing_probe.py  catap_profile_pipeline.py  catap_test_tone.py  compare_profile_runs.py  profile_catap.py
src/catap/: __init__.py  __main__.py  _backend.py  _capture_engine.py  _native_coreaudio.py  _recording_support.py  _recording_worker.py  _runtime.py  _session_backend.py  audio_buffer.py  cli.py  recorder.py  session.py
src/catap/_devtools/: __init__.py  test_tone.py  tone.py  tone_analyzer.py  tone_farm.py
src/catap/bindings/: __init__.py  _accelerate.py  _audiotoolbox.py  _coreaudio.py  device.py  hardware.py  process.py  tap.py  tap_description.py
src/catap/bundle/: launcher.py
src/catap/catap.app/Contents/: Info.plist
src/catap/catap.app/Contents/MacOS/: catap  catap.sh
src/catap/core/: __init__.py  meter.py  recorder.py  streamer.py
tests/: test_audiotoolbox.py  test_capture_engine.py  test_cli.py  test_compare_profile_runs.py  test_coreaudio.py  test_device.py  test_devtools_test_tone.py  test_integration.py  test_native_coreaudio.py  test_process.py  test_profile_script.py  test_public_api.py  test_recorder.py  test_runtime.py  test_script_tone_utils.py  test_session.py  test_tap.py  test_tap_description.py  test_tone_analyzer.py  test_tone_farm.py
