[project]
name = "catap"
version = "0.4.3"
description = "Python bindings and recorder for Apple's Core Audio process taps"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Sage Betko", email = "sage.betko@gmail.com" }
]
requires-python = ">=3.11"
keywords = [
    "audio",
    "macos",
    "core-audio",
    "recording",
    "capture",
    "process-audio",
    "system-audio",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]
dependencies = [
    "pyobjc-core>=11.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=11.0; sys_platform == 'darwin'",
    "pyobjc-framework-CoreAudio>=11.0; sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "setuptools>=82.0.1",
    "twine>=6.2.0",
    "ty>=0.0.21",
]

[project.urls]
Homepage = "https://github.com/sbetko/catap"
Documentation = "https://github.com/sbetko/catap#readme"
Repository = "https://github.com/sbetko/catap"
Issues = "https://github.com/sbetko/catap/issues"

[project.scripts]
catap = "catap.cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
catap = ["py.typed", "native/*.dylib"]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "PERF", "PT"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
addopts = "-q -ra"
testpaths = ["tests"]
strict_config = true
strict_markers = true
strict_parametrization_ids = true
strict_xfail = true
filterwarnings = ["error"]
faulthandler_timeout = "30"
markers = [
    "integration: opt-in tests that exercise the real macOS Core Audio bridge",
]

[tool.coverage.report]
omit = [
    "src/catap/__main__.py",
    "src/catap/_devtools/*",
]

[tool.vulture]
paths = ["src", "tests", "scripts"]
sort_by_size = true
ignore_names = [
    "client_data",
    "device",
    "input_time",
    "now",
    "output_time",
    "pytestmark",
    "traceback",
]
